- Removed unneeded files

--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>org.example.planetsexplorer/org.example.planetsexplorer.HelloApplication</mainClass>
+              <mainClass>org.example.planetsexplorer/org.example.planetsexplorer.Main</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
